Ajustes de Codigo

--- a/SimaticArcorWebApi/SimaticWebApi.csproj
+++ b/SimaticArcorWebApi/SimaticWebApi.csproj
@@ -106,7 +106,7 @@
     <None Update="appsettings.development.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="appsettings.arcloud-opc.json">
+    <None Update="appsettings.arcloud-dev.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
 
