--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@
 ################################################################################
 
 /.vs
-
+/obj
+/bin
+/SimaticArcorWebApi/obj
+/SimaticArcorWebApiTest/obj
+/SimaticArcorWebApi/bin
