--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /SimaticArcorWebApi/appsettings.arcloud-pdr.json
 /SimaticArcorWebApi/appsettings.arcloud-development.json
 /SimaticArcorWebApi/appsettings.json
+/SimaticArcorWebApi/appsettings.arcloud-dev.json
+/SimaticArcorWebApi/appsettings.arcloud-development.json
+/SimaticArcorWebApi/appsettings.json
