--- a/SimaticArcorWebApi/SimaticWebApi.csproj
+++ b/SimaticArcorWebApi/SimaticWebApi.csproj
@@ -102,6 +102,9 @@
     <None Include="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="appsettings.arcloud-dev.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
 
     <None Update="appsettings.development.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
