add validation, work order in execution
se agrega una validacion para no actualizar cuando la orden de trabajo este en ejecucion

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@
 /SimaticArcorWebApi/obj
 /SimaticArcorWebApiTest/obj
 /SimaticArcorWebApi/bin
-/SimaticArcorWebApi/appsettings.arcloud-pdr.json
-/SimaticArcorWebApi/appsettings.arcloud-development.json
-/SimaticArcorWebApi/appsettings.json
-/SimaticArcorWebApi/appsettings.arcloud-dev.json
-/SimaticArcorWebApi/appsettings.arcloud-development.json
-/SimaticArcorWebApi/appsettings.json
+SimaticArcorWebApi/appsettings.arcloud-pdr.json
+SimaticArcorWebApi/appsettings.arcloud-development.json
+SimaticArcorWebApi/appsettings.json
+SimaticArcorWebApi/appsettings.arcloud-dev.json
+SimaticArcorWebApi/appsettings.arcloud-development.json
+SimaticArcorWebApi/appsettings.json
+SimaticArcorWebApi/appsettings.development.json
+
+SimaticArcorWebApi/appsettings.development.json
