--- a/SimaticArcorWebApi/appsettings.development.json
+++ b/SimaticArcorWebApi/appsettings.development.json
@@ -3,7 +3,8 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://arcloud-opc1:55777"
+        //"Url": "http://arcloud-opc1:55778"
+        "Url": "http://arcloud-dev:55778"
       }
       //"Https": {
       //  "Url": "https://arcloud-opc1:55779",
@@ -51,13 +52,21 @@
     "description": "Web api to handshake information between SIMATIC IT UA and NetSuite."
   },
   "SimaticConfig": {
-    "url": "http://arcloud-opc1",
+    "url": "http://arcloud-dev",
     "grantType": "password",
-    "username": "Sitintegracion",
-    "password": "J4nio2024+",
+    "username": "admin",
+    "password": "Colombia123",
     "scope": "global",
     "timeout": 400
   },
+  //"SimaticConfig": {
+  //  "url": "http://arcloud-opc1",
+  //  "grantType": "password",
+  //  "username": "Sitintegracion",
+  //  "password": "J4nio2024+",
+  //  "scope": "global",
+  //  "timeout": 400
+  //},
   "NancyConfig": {
     "enableRequestLogging": true
   },
