--- a/SimaticArcorWebApi/appsettings.json
+++ b/SimaticArcorWebApi/appsettings.json
@@ -62,13 +62,13 @@
   "SimaticConfig": {
     "url": "http://arcloud-dev",
     "grantType": "password",
-    "username": "Sitintegracion",
-    "password": "J4nio2024+",
+    "username": "admin",
+    "password": "Colombia123",
     "scope": "global",
     "timeout": 400
   },
   //"SimaticConfig": {
-  //  "url": "http://arcloud-dev",
+  //  "url": "http://arcloud-opc1",
   //  "grantType": "password",
   //  "username": "Sitintegracion",
   //  "password": "J4nio2024+",
